--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="stock.html">Einsite Stock Indexing</a>
+                <a class="navbar-brand" href="index">Contacts App</a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -44,7 +44,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="/logout.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                 </li>
@@ -93,9 +93,13 @@
                         <a href="#">
                             <div class="panel-footer">
                                 <span>
-                                    Welcome to Einsite Stock Indexing.<br><br>
-                                    For view tables and data of all the stack, go to Stock Lookup Table Tab.<br><br>
-                                    For viewing Charts and Analysis report, go to Stock Analysis Tab.
+                                    Welcome to Contacts App.<br><br>
+                                    Here you can send message using twilio API, Add Contacts and View your message logs.
+                                    <br>
+                                    Contact Details tabs contains add contact feature.Add your contact(Be sure it is first addedd in twilio number.) and send them messages and OTP.
+                                    <br>
+                                    Sent Messages Tab contains message logs that you have sent from your number.<br>
+
                                     
 
 
