--- a/views/tables.html
+++ b/views/tables.html
@@ -120,7 +120,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="stock.html">Contatcs Details </a>
+                <a class="navbar-brand" href="index">Contacts  App </a>
             </div>
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
@@ -128,7 +128,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="logout.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="logout"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                 </li>
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="col-md-6">
-                        <h1 class="page-header">Contatcs Details</h1>
+                        <h1 class="page-header">Contacts Details</h1>
                     </div>
                     <div class="col-md-6 page-header">
                         <td class="center" style="text-align: center;"><button type="button" class="btn btn-info" data-toggle="modal" data-target="#AddContactModal" onclick="">Add-Contact</button></td>
