--- a/views/flot.html
+++ b/views/flot.html
@@ -130,7 +130,7 @@
                                         <th>To</th>
                                         <th>Message sent</th>
                                         <th>Date/Time</th>
-                                        <th>Remove Contact</th>
+                                        <th>Remove log</th>
                                     </tr>
                                 </thead>
                                 <tbody id="company_stock_details_output">
